--- a/image classification.ipynb
+++ b/image classification.ipynb
@@ -16,17 +16,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "4ba38404-456e-4190-b50a-79ea46ebef7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:8: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "<>:8: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_2708\\455333584.py:8: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "  datadir = 'D:\\git\\Flower-Classification'\n",
+      "C:\\Users\\harsh\\AppData\\Local\\Temp\\ipykernel_2708\\455333584.py:8: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "  datadir = 'D:\\git\\Flower-Classification'\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'imread' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 15\u001b[0m\n\u001b[0;32m     13\u001b[0m path\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(datadir,category)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m img \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(path):\n\u001b[1;32m---> 15\u001b[0m   img_matrix\u001b[38;5;241m=\u001b[39mimread(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(path,img))\n\u001b[0;32m     16\u001b[0m   img_resized\u001b[38;5;241m=\u001b[39mresize(img_matrix,(\u001b[38;5;241m150\u001b[39m,\u001b[38;5;241m150\u001b[39m,\u001b[38;5;241m3\u001b[39m))\n\u001b[0;32m     17\u001b[0m   flat_data\u001b[38;5;241m.\u001b[39mappend(img_resized\u001b[38;5;241m.\u001b[39mflatten())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'imread' is not defined"
+     ]
+    }
+   ],
    "source": [
     "target = []\n",
     "images = [] \n",
     "flat_data = []\n",
     "\n",
     "\n",
-    "datadir = 'C:/Users/harsh/internship/img/images'\n",
+    "\n",
+    "\n",
+    "datadir = 'D:\\git\\Flower-Classification'\n",
     "categories = ['rose flower','sunflower','Marigold','Daisy']\n",
     "\n",
     "for category in categories:\n",
@@ -1660,7 +1686,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
